--- a/style.css
+++ b/style.css
@@ -29,7 +29,14 @@ table{
     width: 100%;
     height: 250px;
 }
+h3{
+    width: 100%;
+    position: absolute;
+    top: 110px;
+    font-size: xx-large;
+}
 .lugares{
+    position: relative;
     min-width: 300px;
     width: 30%;
     color: white;
@@ -70,9 +77,7 @@ h2{
     margin: 10px;
     margin-left: 15px;
 }
-h3{
 
-}
 center{
     align-items: center;
     justify-content: center;
