--- a/style.css
+++ b/style.css
@@ -8,8 +8,22 @@
     top: 0;
     position: absolute;
 }
+
+#form{
+    background-color: rgb(18,82,1);
+    width: fit-content;
+    /* padding: 15px; */
+    border-radius: 30px;
+    right: 0;
+    top: 0;
+    position: absolute;
+}
 body{
     background-image: url(./image.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    /* background:fixed; */
+    /* background: ; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 main{
@@ -45,6 +59,22 @@ h3{
     border-radius: 25px;
     margin: 10px;
 }
+.prom{
+    text-align: left;
+    position: relative;
+    min-width: 300px;
+    width: 30%;
+    color: white;
+    background-color: green;
+    height: fit-content;
+    border-radius: 25px;
+    margin: 10px;
+}
+h4{
+    margin: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
@@ -56,7 +86,7 @@ a{
     margin: 30px;
     padding: 10px;
     border: 0;
-    min-width: 300px;    
+    width: 300px;    
     border-radius: 20px;
     background-color: rgba(0, 128, 0, 0.518);
 }
@@ -101,3 +131,46 @@ button:hover{
     transition:  all .5s;
 } */
 
+.content{
+    width: fit-content;
+    /* height: 100px; */
+    color: white;
+    background-color: green;
+    margin: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 10px;
+}
+.input{
+    background-color: transparent;
+    height: 40px;
+    width: 300px;
+    border: 0;
+    border-bottom: 1px solid black;
+    padding: 10px;
+    margin: 20px;
+    color: white;
+}
+.pin{
+    width: 300px;
+    text-align: left;
+}
+.boton{
+    border: 0;
+    /* color: ; */
+    border-radius: 10px;
+    width: 140px;
+    height: 40px;
+    background-color:#37962f;
+}
+.boton:hover{
+    transform: scale(1.10);
+    transition: all .5s;
+    background-color:  #3ea534;
+}
+#botones{
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
