--- a/style.css
+++ b/style.css
@@ -10,13 +10,23 @@
 }
 
 #form{
-    background-color: rgb(18,82,1);
-    width: fit-content;
-    /* padding: 15px; */
+    background-color:transparent;
+    width: 50px;
+    height: 50px;
+    padding: 0;
     border-radius: 30px;
     right: 0;
     top: 0;
     position: absolute;
+}
+
+#form:hover{
+    transform: scale(1.20) ;
+
+}
+
+.vm:hover{
+    background-color: #116b09;
 }
 body{
     background-image: url(./image.png);
