--- a/style.css
+++ b/style.css
@@ -198,3 +198,29 @@ button:hover{
     accent-color: darkgreen;
     /* bacx */
 }
+
+.dLug{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+}
+.places{
+    margin: 0;
+    font-size:20px;
+    width: 50%;
+}
+.precio{
+    width: 100%;
+    text-align: center;
+}
+.contrata{
+    font-family:;
+    background-color: #3ea534;
+    font-size: xx-large;
+    width: 90%;
+    height: 60px;
+    border: 0;
+    margin: 5%;
+    border-radius: 10px ;
+}
