--- a/style.css
+++ b/style.css
@@ -135,19 +135,6 @@ center{
 li{
     padding-left: 15px;
 }
-/* button{
-    margin: 30px;
-    border: 0;
-    width: 300px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: rgba(0, 128, 0, 0.518);
-}
-button:hover{
-    background-color: rgba(0, 136, 0, 0.721);
-    transform:  translate(-2.5px, -2.5px);
-    transition:  all .5s;
-} */
 
 .content{
     width: fit-content;
@@ -223,6 +210,7 @@ button:hover{
     border: 0;
     margin: 5%;
     border-radius: 10px ;
+    text-align: center;
 }
 
 #btnIn{
@@ -232,4 +220,57 @@ button:hover{
     width: 300px;    
     border: 0;
     background-color: transparent;
+}
+
+.opcion{
+    height: fit-content;
+    min-width: 300px;
+    width: 45%;
+    margin: 20px;
+    padding: 10px 0;
+    border-radius: 15px;
+    background-color: green;
+    color: white;
+}
+#main{
+    flex-wrap: wrap;
+    height: 100svh;
+    min-width: 100%;
+    margin: 20px 0 20px 0;
+}
+
+.contratar{
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.contratar:hover{
+    background-color:transparent;
+    transform:  none;
+}
+#contr{
+    display: grid;
+    min-width: 300px;
+    height: fit-content ;
+    margin-top: 10px;
+}
+
+.cont{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100% ;
+    margin-bottom: 20px;
+    max-width: 400px;
+    padding: 10px 0;
+    border-radius: 15px;
+    background-color: green;
+    color: white;
 }
